--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
+  
   "scripts": {
-    "dev":"nodemon index.js", 
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [], 
   "author": "",
   "license": "ISC",
   "description": "",
@@ -17,9 +18,11 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.0"
+    "mongoose": "^8.16.0",
+    "openai": "^5.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
