--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "openai": "^5.8.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdfkit": "^0.17.2",
     "pdfmake": "^0.2.20"
   },
   "devDependencies": {
